--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -3,29 +3,13 @@
 
   <!-- 用户 openid -->
   <view class="userinfo">
-    <block wx:if="{{canIUseOpenData}}" class="userinfo-opendata">
-      <view class="userinfo-block-avatar" bindtap="bindViewTap">
-        <open-data type="userAvatarUrl"></open-data>
-      </view>
-    </block>
-    <block wx:elif="{{!hasUserInfo}}">
-      <button wx:if="{{canIUseGetUserProfile}}" bindtap="getUserProfile" class="userinfo-avatar"
-        style="background-image: url({{avatarUrl}})" size="default"></button>
-      <button wx:else open-type="getUserInfo" bindgetuserinfo="onGetUserInfo" class="userinfo-avatar"
-        style="background-image: url({{avatarUrl}})" size="default"></button>
-    </block>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-block-avatar" src="{{avatarUrl}}" mode="cover"></image>
-    </block>
+    <open-data type="userNickName"></open-data>
+    <open-data type="userAvatarUrl"></open-data>
     <view class="userinfo-nickname-wrapper">
-      <button class="userinfo-nickname" bindtap="onGetOpenid">点击获取 openid</button>
+      <button class="userinfo-nickname" bindtap="getUserProfile">点击获取 openid</button>
     </view>
   </view>
 
 
-
-  <view>
-    <image src="{{imageUrl}}" ></image>
-  </view>
-
+  <!-- <button open-type="getUserInfo" bindgetuserinfo="getuserinfo">授权</button> 已过时 -->
 </view>
