--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,15 +1,31 @@
-.container{
+.container {
+  position: relative;
   width: 100%;
   height: 100%;
 }
 
-.container>.swiper{
+.container>.swiper {
   width: 100%;
   height: 100vh;
 
 }
 
-.container image{
+.container image {
   width: 100%;
   height: 100%;
+}
+
+.container>.tab {
+  position: absolute;
+  top: 50%;
+  color: white;
+  z-index: 9;
+}
+
+.container>.prev {
+  left: 10rpx;
+}
+
+.container>.next {
+  right: 10rpx;
 }
