--- a/miniprogram/components/swiper-screen/index.wxml
+++ b/miniprogram/components/swiper-screen/index.wxml
@@ -5,7 +5,7 @@
   current="{{swiperCurrent}}" 
   bindchange="swiperChange" 
   circular>
-  <swiper-item wx:key="sss" wx:for="{{swiperList}}">
+  <swiper-item wx:key="ss" wx:for="{{swiperList}}">
     <item-view item="{{item}}" swiperHeight="{{swiperHeight}}"></item-view>
   </swiper-item>
 </swiper>
