2021年6月2日 20点42分

--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,5 +1,6 @@
 @import "./colorui/icon.wxss";
 @import "./colorui/main.wxss";
+@import "./colorui/animation.wxss";
 @import "./assets/font/font.wxss";
 @import "./assets/icon/icon.wxss";
 
