--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,7 +1,7 @@
 @import "./colorui/icon.wxss";
 @import "./colorui/main.wxss";
 @import "./colorui/animation.wxss";
-@import "./assets/font/font.wxss";
+/* @import "./assets/font/font.wxss"; */
 @import "./assets/icon/icon.wxss";
 
 page {
