增加设置/我的页

--- a/miniprogram/pages/mine/index.wxml
+++ b/miniprogram/pages/mine/index.wxml
@@ -1,2 +1,4 @@
 <!--pages/mine/index.wxml-->
-<text>pages/mine/index.wxml</text>
+<view class="container">
+  <custom-tab-bar inner-selected="{{2}}"></custom-tab-bar>
+</view>
