--- a/miniprogram/pages/recordlist/index.wxss
+++ b/miniprogram/pages/recordlist/index.wxss
@@ -2,13 +2,16 @@
 .main {
   position: relative;
   width: 100%;
-  background: #131124;
+  background: #ffffff;
+  color: black;
 }
 
 .main>.header {
   width: 100%;
   height: 160px;
-  transition: 1s;
+  transition: .3s;
+  overflow: hidden;
+  position: relative;
 }
 
 .main>.hide {
@@ -17,17 +20,71 @@
 
 .main>.body {
   width: 100%;
-  border-radius: 10px 10px 0 0;
   background-color: white;
+  transition: .3s;
+
+}
+
+.header>.textBox {
+  position: absolute;
+  top: 20rpx;
+  bottom: 20rpx;
+  left: 20rpx;
+  right: 20rpx;
+  border-radius: 5px;
+  border: 1px solid #dbe6fd;
+  color: #999;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.textBox>.day {
+  font-size: 100rpx;
+  font-weight: bold;
+  color: #301b3f;
 }
 
 .scroll {
   width: 100%;
   height: 100%;
+  padding: 30rpx;
 }
 
 .scroll .scroll-item {
   width: 100%;
   height: 100px;
   color: black;
+  background: #3c415c;
+  margin-bottom: 20rpx;
+  display: flex;
+}
+
+.scroll-item>.dateBox {
+  flex: 1;
+  background-color: #47597e;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 20rpx;
+  color: white;
+}
+
+.dateBox>text{
+  margin-top: 5rpx;
+}
+
+.dateBox>.day{
+  margin-top: 20rpx;
+  font-size: 28rpx;
+  font-weight: bold;
+}
+
+.scroll-item>.sentenceBox {
+  background-color: #dbe6fd;
+  flex: 4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
