签到列表页实装

--- a/miniprogram/pages/recordlist/index.wxml
+++ b/miniprogram/pages/recordlist/index.wxml
@@ -3,7 +3,7 @@
   <view class="header {{toUp? '': 'hide'}}">
     <view class="textBox">
       <text>累计打卡</text>
-      <text class="day">{{1}}</text>
+      <text class="day">{{'∞'}}</text>
       <text>天</text>
     </view>
 
@@ -12,15 +12,16 @@
     <scroll-view id="scroll" class="scroll" enhanced="true" fast-deceleration="true" bounces="false"
       scroll-with-animation="true" scroll-y="true" bindscrolltoupper="upper" upper-threshold="0"
       scroll-into-view="{{toViewid}}" enable-back-to-top="true" bindscroll="handleScroll">
-      <!-- https://images.unsplash.com/photo-1621478492435-a6153fec2926?crop=top&w=1080&h=300&fit=crop -->
-      <view class="scroll-item" wx:key="ss" wx:for="{{list}}" id="list{{index}}">
+      <view class="scroll-item" wx:key="ss" wx:for="{{list}}" id="list{{index}}" style="background-image:url({{item.imageUrl}})">
+        <view class="opacity">
         <view class="dateBox">
-          <text class="day">03</text>
-          <text>六月2021</text>
+          <text class="day">{{item.date}}</text>
+          <text>{{item.month}}月{{item.year}}</text>
         </view>
         <view class="sentenceBox">
-          <text>我不愿做任何人除了我自己。</text>
+          <text>{{item.translation}}</text>
         </view>
+      </view>
       </view>
     </scroll-view>
   </view>
