--- a/miniprogram/pages/recordlist/index.wxss
+++ b/miniprogram/pages/recordlist/index.wxss
@@ -52,23 +52,23 @@
 }
 
 .scroll .scroll-item {
+  position: relative;
   width: 100%;
-  height: 100px;
-  color: black;
-  background: #3c415c;
+  height: 160px;
+  color: white;
   margin-bottom: 20rpx;
   display: flex;
+  border-radius: 8px;
+  overflow: hidden;
 }
 
-.scroll-item>.dateBox {
+.opacity>.dateBox {
   flex: 1;
-  background-color: #47597e;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   font-size: 20rpx;
-  color: white;
 }
 
 .dateBox>text{
@@ -81,10 +81,24 @@
   font-weight: bold;
 }
 
-.scroll-item>.sentenceBox {
-  background-color: #dbe6fd;
+.opacity>.sentenceBox {
+  padding: 0 10rpx;
   flex: 4;
+  font-size: 28rpx;
+  font-weight: 600;
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-position: center;
+  background-size: cover;
+}
+
+.opacity{
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  background-color: rgba(0, 0, 0, 0.3);
 }
