--- a/miniprogram/pages/recordlist/index.wxss
+++ b/miniprogram/pages/recordlist/index.wxss
@@ -62,6 +62,10 @@
   overflow: hidden;
 }
 
+.scroll-item:last-child{
+  margin-bottom: 525px;
+}
+
 .opacity>.dateBox {
   flex: 1;
   display: flex;
