--- a/miniprogram/pages/imageList/index.wxss
+++ b/miniprogram/pages/imageList/index.wxss
@@ -1,16 +1,65 @@
 /* pages/imageList/index.wxss */
-.container{
+.container {
   position: relative;
+  background-color: black;
 }
-.image{
-  position: absolute;
-  height: 100vh;
+
+.header{
+  width: 100%;
+  height: 120rpx;
+  font-size: 36rpx;
+  font-weight: bold;
+  text-align: center;
+  line-height: 120rpx;
+}
+
+.masonry {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+}
+
+
+.column {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  padding: 0 4rpx;
+}
+
+.item {
+  margin-bottom: 4rpx;
   width: 100%;
 }
 
-.text{
-  position: absolute;
-  font-size: 42rpx;
-  top: 400rpx;
-  left: 10%;
+.item image{
+  width: 100%;
 }
+
+.dialog{
+  position: relative;
+	display: inline-block;
+	vertical-align: middle;
+	margin-left: auto;
+	margin-right: auto;
+  width: 100%;
+	background-color: #f8f8f831;
+  overflow: hidden;
+}
+
+.dialog> image{
+  position: relative;
+
+}
+
+.downImage{
+  position: absolute;
+  right: 30rpx;
+  bottom: 30rpx;
+  width: 100rpx;
+  height: 100rpx;
+  border-radius: 50rpx;
+  line-height: 100rpx;
+  background: rgba(0, 0, 0, 0.6);
+}
+
