--- a/miniprogram/pages/mine/index.wxss
+++ b/miniprogram/pages/mine/index.wxss
@@ -1,16 +1,94 @@
 /* pages/mine/index.wxss */
-.container{
+.container {
   position: relative;
-}
-.image{
-  position: absolute;
-  height: 100vh;
-  width: 100%;
+  color: #888;
 }
 
-.text{
+.container>.header {
+  height: 300rpx;
+  display: flex;
+  color: #888;
+  align-items: flex-start;
+}
+
+.container>.middle {
+  margin: 0 50rpx;
+  height: 90rpx;
+  border: 1px solid #ccc;
+  line-height: 90rpx;
+  padding: 0 30rpx;
+}
+
+.container>.body {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+.header>.userinfo-avatar {
+  margin: 100rpx;
+  position: relative;
+  width: 130rpx;
+  height: 130rpx;
+  border-radius: 100rpx;
+  z-index: 3;
+  background-color: #fff;
+}
+
+.header>.userinfo-nickname {
+  margin: 100rpx 0;
+
+}
+
+.userinfo-avatar::before,
+.userinfo-avatar::after {
   position: absolute;
-  font-size: 42rpx;
-  top: 400rpx;
-  left: 10%;
+  content: '';
+  width: 100%;
+  height: 100%;
+  border-radius: 100rpx;
+
+}
+
+.userinfo-avatar::before {
+  transform: scale(1.8);
+  background-color: #e4fbff;
+}
+
+.userinfo-avatar::after {
+  transform: scale(1.3);
+  background-color: #b8b5ff;
+}
+
+.userinfo-avatar>image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  border-radius: 100rpx;
+}
+
+.body>.items-title {
+  font-size: 26rpx;
+  margin: 30rpx 20rpx;
+}
+
+.body>.items {}
+
+.items>.item {
+  padding: 0 30rpx;
+  display: flex;
+  align-items: center;
+  height: 100rpx;
+}
+
+.item-hover {
+  background-color: #eeeeee75;
+  color: #888;
+}
+
+.item>text {
+  padding-left: 10rpx;
+  flex: 1;
+  color: #000;
 }
